--- a/src/TryMudBlazor.Client/Pages/Repl.razor
+++ b/src/TryMudBlazor.Client/Pages/Repl.razor
@@ -43,6 +43,7 @@
         <MudSpacer />
         <MudLink Typo="Typo.body2" Class="ml-10 version-info" Color="Color.Inherit" Href="https://dotnet.microsoft.com/download" Target="_blank">.net @Environment.Version.ToString()</MudLink>
         <MudLink Typo="Typo.body2" Class="ml-5 version-info" Color="Color.Inherit" Href="https://github.com/MudBlazor/MudBlazor/releases" Target="_blank">mudblazor @Version</MudLink>
+        <MudLink Typo="Typo.body2" Class="ml-5 version-info" Color="Color.Inherit" Href="https://github.com/CodeBeamOrg/CodeBeam.MudBlazor.Extensions/releases" Target="_blank">mudextensions @MudExtensionsVersion</MudLink>
     </MudAppBar>
 </div>
 @code{
